# id

./: README.md
research/: pyproject.toml  sifter.py
research/experiments/: 001-all-chars.py
research/jobs/000-test/: input.jsonl  output.jsonl
research/jobs/001-all-chars/: input.jsonl
